# five-hundreds

./: .gitignore  SCRATCH
client/: dev_client.html  dev_client.js
rust/src/: api.rs  main.rs
server/: Cargo.toml
server/src/: aborted.rs  api.rs  engine.rs  events.rs  lobby.rs  main.rs  session.rs  stages.rs  types.rs  web_bridge.rs
server/src/stages/: aborted.rs  bid_won.rs  bidding.rs  lobby.rs  mod.rs
