[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
log = "*"
env_logger = "*"
unique_id = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
futures-util = "*"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-tungstenite = "*"
